--- a/BallClockRepititionCounter/BallClockRepititionCounter.csproj
+++ b/BallClockRepititionCounter/BallClockRepititionCounter.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -65,6 +66,7 @@
     </Compile>
     <Compile Include="Ball.cs" />
     <Compile Include="BallClockSimulator.cs" />
+    <Compile Include="BallClockViewModel.cs" />
     <Compile Include="BallQueue.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -72,6 +74,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObservableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
